Moved BG images to CSS + Fixed broken layout on Arts#show

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -37,6 +37,14 @@
   border: #f7f7f7 1px solid;
 }
 
+.no-avatar {
+  background-image: url('//res.cloudinary.com/trembylene/image/upload/v1525074875/kmixjiw4vmgqwt0hnpsj.png');
+}
+
+.no-artist {
+  background-image: url('//res.cloudinary.com/trembylene/image/upload/v1525075406/rah5d3yzvx7jbkzakhrv.jpg');
+}
+
 .avatar-profile {
   margin-top: -75px;
 }
